--- a/templates/index.html
+++ b/templates/index.html
@@ -1,51 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
-      h1{
-        font-family:roboto;
-        font-size:50px;
-        font-style:bold;
-        font-variant:caps;
-        text-align-last:center;
-        
+      #banner {
+        height: 600px;
+        width: 100%;
+        object-fit: cover;
       }
-      #h2tag{
-        color:blue;
-        text-align:center;
-        font-style:bold;
-        }  
-      #banner{
-        width:100%;
-        <height:360px;
-        object-fit:cover;
-      }
-      p.bodytext{
-        font-family:roboto;
-        color:blue
-      
-      }   
-      #container{
-        max-width:720px;
-        margin:0 auto;
-      }
-      p{
-        font
-      }
-    
-      
     </style>
+   
   </head>
-  <div id="container">
+  <div class="container">
   <body>
-      <h1>Wildlife Photography</h1>
-      <img id="banner" src="https://a170f9ed-9b3d-498d-b83e-417fee56b71d-00-p3uc3l7zujsh.pike.replit.dev/static/desert.jpg" alt="wildlife pic">
-      <h2 id="h2tag">About Wildlife Photography</h2>
-      <p class="bodytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      <h1 class="text-center mt-2 mb-4">Wildlife Photography</h1>
+    
+      <img  class="img-fluid" id="banner" src="https://a170f9ed-9b3d-498d-b83e-417fee56b71d-00-p3uc3l7zujsh.pike.replit.dev/static/desert.jpg" alt="wildlife pic" height="320">
+      <h2 class="text-center mt-2 mb-4">About Wildlife Photography</h2>
+      <p class="text-center lead mt-4 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
-      <h2 id="h2tag"">Show the places to visit here</h2>
-    <div style="text-align:center">
-      <button>Contact Us</button>
+      <h2 class="text-center mb-4">Show the places to visit here</h2>
+    <div class="text-center">
+      <button class="btn btn-primary btn-lg">Contact Us</button>
       <p>Copyright 2024,Wildlife Photography</p>
     </div>
         </div>
