without apply feature functioning

--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -11,6 +11,9 @@
 </div>
   <div class="col-2">
 
-     <button type="button" class="btn btn-outline-primary">Apply</button>    
+     <a href="mailto:thanmaym@gmail.com?subject=Application%20for%20{{job['title']}}&body=My%20Name%3A%3Cyour-name%3E%0D%0A%0D%0AMy%20Resume%20Link%3A%3Cresume%20link%3E%0D%0A%0D%0AMy%20LinkedIn%20Link%3A%3CLinkedin%3E%0D%0A "type="button" class="btn btn-outline-primary">Apply</a>    
+
+
+    
   </div>
   </div>  
